==========
01/04/2009
==========

- Ajustes no cadastro de feeds
- Inclusao de novas tags de i18n
- Alteracao do model, inclusao de stored procedure para inclusao de feeds

HORAS TRABALHADAS: 6h

==========
02/04/2009
==========

- Cadastro de feed ok através de stored procedure

HORAS TRABALHADAS: 1h

==========
03/04/2009
==========

- Remoção de stored procedure. Implementação de transaction e queryes através
do código PHP
- Ajustes no código base. Implementação de transaction no Model

HORAS TRABALHADAS: 2h

==========
04/04/2009
==========

- Alteração do cadastro de Feeds. Inclusao da biblioteca feedparser no
backend e implementação no webservice discover_feed(url)

HORAS TRABALHADAS: 2h