@@ -20,16 +20,16 @@ class WebService:
     def __init__(self):
         self.token = ""
 
-    # discover feeds
+    # feed discover
 
-    def discover_feeds(self, args):
+    def feed_discover(self, args):
         if args['token'] == None or args['url'] == None:
             return None
 
         if args['token'] != self.token:
             return None
 
-        # discover feeds with feedfinder
+        # feed discover with feedfinder
 
         import feedfinder
 
@@ -40,7 +40,7 @@ class WebService:
         result = {}
         feeds_len = len(feeds)
 
-        # parse feeds with feedparser
+        # feed parsing with feedparser
 
         if feeds_len > 0:
 
@@ -58,14 +58,14 @@ class WebService:
 def test(token, url):
     ws = WebService()
     ws.token = token
-    return ws.discover_feeds({'token': token, 'url': url})
+    return ws.feed_discover({'token': token, 'url': url})
 
 # test remote (with xmlrpc call)
 
 def test_remote(token, url, remote):
     import xmlrpclib
     server = xmlrpclib.ServerProxy(remote)
-    return server.discover_feeds({'token': token, 'url': url})
+    return server.feed_discover({'token': token, 'url': url})
 
 if __name__ == '__main__':
     token = "c4z5mYW1pYWSJe2BzcIq1wv6n95o1E2kwuD1B0Wuo3XbHx82Vk"
